--- a/media.html
+++ b/media.html
@@ -77,6 +77,7 @@
             <img src="images/IMG_8227.jpeg" alt="Photo">
             <img src="images/161DB5AC-170F-459D-B904-31EB064733B5.jpeg" alt="Photo">
             <img src="images/2be095e355344d878577fb6120574761.jpeg" alt="Photo">
+            <img src="images/IMG_3155.jpeg" alt="Photo">
         </div>
     </main>
 
