Add Strava activity embed to bottom bar

--- a/reading-2025.html
+++ b/reading-2025.html
@@ -96,6 +96,7 @@
                 </svg>
             </a>
         </div>
+        <iframe class="strava-embed" height="160" width="300" frameborder="0" allowtransparency="true" scrolling="no" src=""></iframe>
         <img src="images/oliver.jpg" alt="Oliver" class="profile-photo">
     </div>
 
